feat(docs): enhance getting started guide, add security and websocket sections, and introduce LocalJobExecutor